// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseSummary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    8
     
    expenses
     with a total of 
    $250,240.00
  </h2>
</div>
`;

exports[`Should render ExpenseSummary with one expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     with a total of 
    $250.00
  </h2>
</div>
`;
